syntax = "proto3";

package proto;

option go_package = "github.com/cubefs/inodedb/proto";

enum ClusterOperation {
	OPERATION_JOIN = 0;
	OPERATION_QUIT = 1;
	OPERATION_OFFLINE = 2;
}

enum SpaceType {
	SPACE_TYPE_NORMAL = 0;
}

enum NodeRole {
	NODE_ROLE_SINGLE = 0;
	NODE_ROLE_SHARDSERVER = 1;
	NODE_ROLE_MASTER = 2;
	NODE_ROLE_ROUTER = 4;
}

enum NodeState {
	NODE_STATE_UNKNOWN = 0;
	NODE_STATE_ALIVE = 1;
	NODE_STATE_SUSPECT = 2;
	NODE_STATE_QUIT = 3;
}

message Node {
	uint32 id = 1;
	string addr = 2;
	uint32 grpc_port = 3;
	uint32 http_port = 4;
	string az = 5;
	NodeRole roles = 6;
	NodeState state = 7;
}

enum FieldType {
	BOOL = 0;
	INT = 1;
	FLOAT = 2;
	STRING = 3;
	EMBEDDING = 4;
}

enum IndexOption {
	Null = 0;
	Indexed = 1;
	Fulltext = 2;
	Unique = 3;
}

message SpaceMeta {
	uint64 sid = 1;
	string name = 2;
	SpaceType type = 3;
	repeated FieldMeta fixed_fields = 4;
	repeated Shard shards = 5;
}

message Shard {
	uint32 shard_id = 1;
	InoRange ino_range = 2;
	uint64 ino_used = 3;
	repeated Node replicates = 4;
}

message InoRange {
	uint64 start_ino = 1;
	uint64 end_ino = 2;
	uint64 ino_limit = 3;
}

message Item {
	uint64 ino = 1;
	uint64 links = 2;
	repeated Field fields = 3;
}

message Field {
	FieldMeta meta = 1;
	bytes value = 2;
}

message FieldMeta {
	string name = 1;
	FieldType type = 2;
	IndexOption indexed = 3;
}

message Embedding {
	repeated float elements = 1;
	string source = 2;
}

message Link {
	uint64 parent = 1;
	string name = 2;
	uint64 child = 3;
	bytes fields = 4;
}

message Unlink {
	uint64 parent = 1;
	string name = 2;
}
