syntax = "proto3";

package inodedb.proto;
option go_package = "./;proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

import "gogoproto/gogo.proto";
import "inodedb.proto";

service InodeDBMaster {
	rpc Cluster (ClusterRequest) returns (ClusterResponse) {}
	rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
	rpc Report (ReportRequest) returns (ReportResponse) {}
	rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
	rpc CreateSpace (CreateSpaceRequest) returns (CreateSpaceResponse) {}
	rpc DeleteSpace (DeleteSpaceRequest) returns (DeleteSpaceResponse) {}
	rpc GetSpace (GetSpaceRequest) returns (GetSpaceResponse) {}
	rpc GetCatalogChanges (GetCatalogChangesRequest) returns (GetCatalogChangesResponse) {}
	rpc GetRoleNodes (GetRoleNodesRequest) returns (GetRoleNodesResponse) {}
	
	rpc AllocDiskID (AllocDiskIDRequest) returns (AllocDiskIDResponse) {}
	rpc AddDisk (AddDiskRequest) returns (AddDiskResponse) {}
	rpc ListDisks (ListDiskRequest) returns (ListDiskResponse) {}
	rpc GetDisk (GetDiskRequest) returns (GetDiskResponse) {}
}

service InodeDBRouter {
	rpc InsertItem (InsertItemRequest) returns (InsertItemResponse) {}
	rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {}
	rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {}
	rpc GetItem (GetItemRequest) returns (GetItemResponse) {}
	rpc Link (LinkRequest) returns (LinkResponse) {}
	rpc Unlink (UnlinkRequest) returns (UnlinkResponse) {}
	rpc List (ListRequest) returns (ListResponse) {}
	rpc Search (SearchRequest) returns (SearchResponse) {}
}

service InodeDBShardServer {
	rpc AddShard (AddShardRequest) returns (AddShardResponse) {}
	rpc UpdateShard (UpdateShardRequest) returns (UpdateShardResponse) {}
	rpc GetShard (GetShardRequest) returns (GetShardResponse) {}
	rpc ShardInsertItem (ShardInsertItemRequest) returns (ShardInsertItemResponse) {}
	rpc ShardUpdateItem (ShardUpdateItemRequest) returns (ShardUpdateItemResponse) {}
	rpc ShardDeleteItem (ShardDeleteItemRequest) returns (ShardDeleteItemResponse) {}
	rpc ShardGetItem (ShardGetItemRequest) returns (ShardGetItemResponse) {}
	rpc ShardLink (ShardLinkRequest) returns (ShardLinkResponse) {}
	rpc ShardUnlink (ShardUnlinkRequest) returns (ShardUnlinkResponse) {}
	rpc ShardList (ShardListRequest) returns (ShardListResponse) {}
	rpc ShardSearch (ShardSearchRequest) returns (ShardSearchResponse) {}
}

message ClusterRequest {
	ClusterOperation operation = 1;
	Node node_info = 2 [(gogoproto.nullable) = false];
}

message ClusterResponse {
	uint32 id = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "NodeID"];
}

message AllocDiskIDRequest {
}

message AllocDiskIDResponse {
	uint32 disk_id = 1 [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
}

message AddDiskRequest {
	Disk disk = 1 [(gogoproto.nullable) = false];
}

message AddDiskResponse {
}

message ListDiskRequest {
	string az = 1;
	string rack = 2;
	uint32 node_id = 3 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "NodeID"]; // should be host:port format
	DiskStatus status = 4;
	uint32 marker = 5;
	uint32 count = 6;
}

message ListDiskResponse {
	repeated Disk disks = 1 [(gogoproto.nullable) = false];
	uint32 marker = 2;
}

message GetDiskRequest {
	uint32 disk_id = 1 [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
}

message GetDiskResponse {
	Disk disk = 1 [(gogoproto.nullable) = false];
}

message CreateSpaceRequest {
	string name = 1;
	SpaceType type = 2;
	uint32 desired_shards = 3;
	repeated FieldMeta fixed_fields = 4 [(gogoproto.nullable) = false];
}

message HeartbeatRequest {
	uint32 node_id = 1 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "NodeID"];
	repeated DiskReport disks = 2 [(gogoproto.nullable) = false];
}

message HeartbeatResponse {
}

message ReportRequest {
	uint32 node_id = 1 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "NodeID"];
	repeated ShardReport infos = 2 [(gogoproto.nullable) = false];
}

message ReportResponse {
	repeated ShardTask tasks = 1 [(gogoproto.nullable) = false];
}

message GetNodeRequest {
	uint32 id = 1 [(gogoproto.customname) = "ID", (gogoproto.casttype) = "NodeID"];
}

message GetNodeResponse {
	Node node_info = 1 [(gogoproto.nullable) = false];
}

message CreateSpaceResponse {
	SpaceMeta info = 2 [(gogoproto.nullable) = false];
}

message DeleteSpaceRequest {
	string name = 1;
	uint64 sid = 2 [(gogoproto.casttype) = "Sid"];
}

message DeleteSpaceResponse { }

message GetSpaceRequest {
	string name = 1;
	uint64 sid = 2 [(gogoproto.casttype) = "Sid"];
}

message GetSpaceResponse {
	SpaceMeta info = 1 [(gogoproto.nullable) = false];
}

message AddShardRequest {
	uint32 disk_id = 1 [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
	uint64 sid  = 2 [(gogoproto.casttype) = "Sid"];
	uint32 shard_id = 3 [(gogoproto.customname) = "ShardID", (gogoproto.casttype) = "ShardID"];
	uint64 epoch = 4;
	uint64 ino_limit = 5;
	repeated ShardNode nodes = 6 [(gogoproto.nullable) = false];
}

message AddShardResponse {
}

message UpdateShardRequest {
	uint32 disk_id = 1 [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
	uint64 sid = 2 [(gogoproto.casttype) = "Sid"];
	uint32 shard_id = 3 [(gogoproto.customname) = "ShardID", (gogoproto.casttype) = "ShardID"];
	ShardUpdateType op = 4;
	ShardNode node = 5 [(gogoproto.nullable) = false];
}

message UpdateShardResponse {
}

message GetShardRequest {
	uint32 disk_id = 1 [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
	uint64 sid = 2 [(gogoproto.casttype) = "Sid"];
	uint32 shard_id = 3 [(gogoproto.customname) = "ShardID", (gogoproto.casttype) = "ShardID"];
}

message GetShardResponse {
		Shard shard = 1 [(gogoproto.nullable) = false];
}

message InsertItemRequest {
	string space_name = 1;
	uint32 preferred_shard = 2;	// -1 if no preference
	Item item = 3 [(gogoproto.nullable) = false];	//item.ino = 0
}

message InsertItemResponse {
	uint64 ino = 1;
}

message UpdateItemRequest {
	string space_name = 1;
	Item item = 2 [(gogoproto.nullable) = false];
}

message UpdateItemResponse {
}

message DeleteItemRequest {
	string space_name = 1;
	uint64 ino = 2;
}

message DeleteItemResponse {
}

message GetItemRequest {
	string space_name = 1;
	uint64 ino = 2;
}

message GetItemResponse {
	Item item = 1 [(gogoproto.nullable) = false];
}

message LinkRequest {
	string space_name = 1;
	Link link = 2 [(gogoproto.nullable) = false];
}

message LinkResponse { }

message UnlinkRequest {
	string space_name = 1;
	Unlink unlink = 2 [(gogoproto.nullable) = false];
}

message UnlinkResponse { }

message ListRequest {
	string space_name = 1;
	uint64 ino = 2;
	string start = 3;
	uint32 num = 4;
}

message ListResponse {
	uint32 num_links = 1;
	repeated Link links = 2 [(gogoproto.nullable) = false];
}

message Query { }

message HighlightRequest { }

message SearchRequest {
	string space_name = 1;
	Query query = 2 [(gogoproto.nullable) = false];
	int32 count = 3;
	string sorted_by = 4;
	repeated string fields = 5;
}

message SearchResponse {
	uint64 hits = 1;
	repeated Item items = 2 [(gogoproto.nullable) = false];
}

message ShardOpHeader {
	uint32 disk_id = 1  [(gogoproto.customname) = "DiskID", (gogoproto.casttype) = "DiskID"];
	uint32 shard_id = 2  [(gogoproto.customname) = "ShardID", (gogoproto.casttype) = "ShardID"];
	uint64 sid = 3 [(gogoproto.casttype) = "Sid"];
	uint64 route_version = 4 [(gogoproto.casttype) = "RouteVersion"];
}

message ShardInsertItemRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	Item item = 2 [(gogoproto.nullable) = false];	//item.ino = 0
}

message ShardInsertItemResponse {
	uint64 ino = 1;
}

message ShardUpdateItemRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	Item item = 2 [(gogoproto.nullable) = false];
}

message ShardUpdateItemResponse {
}

message ShardDeleteItemRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	uint64 ino = 2;
}

message ShardDeleteItemResponse {
}

message ShardGetItemRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	uint64 ino = 2;
}

message ShardGetItemResponse {
	Item item = 1 [(gogoproto.nullable) = false];
}

message ShardLinkRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	Link link = 2 [(gogoproto.nullable) = false];
}

message ShardLinkResponse { }

message ShardUnlinkRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	Unlink unlink = 2 [(gogoproto.nullable) = false];
}

message ShardUnlinkResponse { }

message ShardListRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	uint64 ino = 2;
	string start = 3;
	uint32 num = 4;
}

message ShardListResponse {
	uint32 num_links = 1;
	repeated Link links = 2 [(gogoproto.nullable) = false];
}

message ShardSearchRequest {
	ShardOpHeader header = 1 [(gogoproto.nullable) = false];
	Query query = 2 [(gogoproto.nullable) = false];
	int32 count = 3;
	string sorted_by = 4;
	repeated string fields = 5;
}

message ShardSearchResponse {
	uint64 hits = 1;
	repeated Item items = 2 [(gogoproto.nullable) = false];
}

message GetCatalogChangesRequest {
	uint64 route_version = 1 [(gogoproto.casttype) = "RouteVersion"];
	uint32 node_id = 2 [(gogoproto.customname) = "NodeID", (gogoproto.casttype) = "NodeID"];
}

message GetCatalogChangesResponse {
	uint64 route_version = 1 [(gogoproto.casttype) = "RouteVersion"];
	repeated CatalogChangeItem items = 2 [(gogoproto.nullable) = false];
}

message GetRoleNodesRequest {
	NodeRole role = 1;
}

message GetRoleNodesResponse {
	repeated Node nodes = 1 [(gogoproto.nullable) = false];
}